@@ -8,5 +8,6 @@ vista-foia (0.20140106-1) UNRELEASED; urgency=low
   * Added "describe-current-version" target to debian/rules.
   * Fixed name of tar.gz file and git hash in get-orig-source for VistA repository.
   * Making progress on database configuration in rules file.
+  * Fixed use of environment variables in rules for gtm_dist and call to GDE and mupip.
 
  -- Luis Ibanez <luis.ibanez@kitware.com>  Wed, 4 Jul 2012 17:16:45 -0500
